--- a/_slicing/src/css/variables.scss
+++ b/_slicing/src/css/variables.scss
@@ -6,6 +6,7 @@ $font-primary: 'Lato';
 $color-primary: #212121;
 $color-secondary: black;
 $color-active: #b8144c;
+$color-link: #8f2782;
 
 $instagram: #a01b5b;
 $linkedin: #0074ae;
