Submenu bigger font, fix projects 4:3, filter same size for mobile, submenu in front, mobile menu z index, header and footer active, parent submenu active, form submit msg styling, fade in and out, fieldset of multiform back of beginning, fix recaptcha z index, change plain select arrow styling, projects z index, triangles position

--- a/_slicing/src/css/foundation.scss
+++ b/_slicing/src/css/foundation.scss
@@ -3331,7 +3331,7 @@ select {
     background-color: #eaeaea;
     color: #0a0a0a; }
   .callout.success {
-    background-color: #e1faea;
+    background: #7364f5;
     color: #0a0a0a; }
   .callout.warning {
     background-color: #fff3d9;
