--- a/_slicing/src/css/main.scss
+++ b/_slicing/src/css/main.scss
@@ -48,10 +48,17 @@ h3, h4 {
 	}
 }
 
+.grecaptcha-badge {
+	z-index: 20;
+}
+
+
 .header {
 	height: 109px;
 	background: white;
 	align-items: center;
+	z-index: 3;
+	position: relative;
 	.container-logo {
 		left: 40px;
 		position: absolute;
@@ -110,7 +117,7 @@ h3, h4 {
 			border: none;
 
 			li a {
-				font-size: 12px;
+				font-size: 14px;
 			}
 		}
 
@@ -390,9 +397,9 @@ h3, h4 {
 			.cell {
 				padding-top: 50px;
 
-
 				b {
 					padding-left: 10px;
+					font-size: 14px;
 				}
 				
 				#container-btn {
@@ -452,7 +459,7 @@ h3, h4 {
 					position: relative;
 					border-radius: 3px;
 					background-color: #729da0;
-					z-index: 4;
+					z-index: 2;
 				}
 
 				&:hover img, &:active img {
@@ -503,7 +510,7 @@ h3, h4 {
 	background: white;
 	padding: 86px 50px 50px 50px;
 	position: relative;
-	z-index: 5;
+	z-index: 2;
 
 	.grid-container {
 		width: $container-xlarge;
@@ -561,8 +568,8 @@ h3, h4 {
 		right: 0;
 		width: 0;
 		height: 0;
-		border-bottom: 697px solid #edf2f4;
-		border-left: 660px solid transparent;
+		border-bottom: 800px solid #edf2f4;
+		border-left: 700px solid transparent;
 	}
 	.grid-container {
 		width: $container-xlarge;
@@ -874,12 +881,6 @@ h3, h4 {
 				position: relative;
 				margin-bottom: 100px;
 				text-align: center;
-				.callout {
-					position: absolute;
-					width: 100%;
-					height: 100px;
-					padding-top: 30px;
-				}
 				h4 {
 					padding-top: 2.5rem;
 					color: #272727;
@@ -893,6 +894,20 @@ h3, h4 {
 						margin-top: -13px;
 					}
 				}
+
+				.callout {
+					position: absolute;
+					width: 100%;
+					left: 0;
+					right: 0;
+					text-align: center;
+
+					h5 {
+						color: white;
+					}
+				}
+
+				
 
 				form {
 					label {
@@ -941,7 +956,7 @@ h3, h4 {
 					    z-index:2;
 					    right:8px;
 					    top:50%;
-					    margin-top:-47px;
+					    margin-top:-37px;
 					    right: 30px;
 					    height:0;
 					    width:0;
