Form validation before invisible recaptcha by grecaptcha.execute(). Post validation for recaptcha. Send confirmation mail to sender and admin (contact form). Insert form in contacto db of contact page. Logo in mail. Extra padding in contact form. Thank you page after submit. Trad encontrado. Insert form in contacto db of inicio page (same table as contacto). Send confirmation mail to sender and admin (inicio form).

--- a/_slicing/src/css/main.scss
+++ b/_slicing/src/css/main.scss
@@ -1050,7 +1050,7 @@ h3, h4 {
 	}
 }
 .contact-white {
-	padding: 0 50px;
+	padding: 50px;
 	background: white;
 
 	.grid-container {
@@ -1086,6 +1086,12 @@ h3, h4 {
 					width: 100%;
 					height: 100px;
 					padding-top: 30px;
+				}
+
+				p {
+					color: #515050;
+					font-size: 1.25rem;
+					font-weight: 400;
 				}
 
 				form {
